[package]
name = "poise_error"
version = "1.3.0"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
description = "An opinionated plug-and-play library for error handling in Discord bots made with poise."
repository = "https://github.com/valentinegb/poise-error"
license = "MIT"

[dependencies]
anyhow = "1"
poise = { version = "0", default-features = false }
serenity = { version = "0", default-features = false, optional = true }
thiserror = "2"
tracing = { version = "0", default-features = false, features = ["std"] }

[features]
default = ["serenity/rustls_backend"]
