[package]
name = "poise_error"
version = "1.6.0"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2024"
description = "An opinionated plug-and-play library for error handling in Discord bots made with poise."
repository = "https://github.com/valentinegb/poise-error"
license = "MIT"

[dependencies]
anyhow = "1.0.0"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", default-features = false, features = ["cache"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, optional = true }
thiserror = "2.0.0"
tracing = { version = "0.1.0", default-features = false, features = ["std"] }

[features]
default = ["serenity/rustls_backend"]
